# secondary-school-map

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
data/raw/: absence_2023-2024.csv
docs/: add-subgroup-metrics-prompt.md  monetization-market-analysis.md  premium-feature-assessment.md
docs/examples/: school-choice-report-n4-1az.html
docs/examples/generator/: gen_report.py  n4_schools.json  report.css
pipeline/: absence.py  build.py  config.py  download.py  gias.py  ks4.py  ofsted.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/scripts/: click_test.mjs  copy-data.mjs  numbox_test.mjs  smoke.mjs  verify.mjs
web/src/: App.jsx  CompareView.jsx  FilterPanel.jsx  SchoolDetail.jsx  SchoolList.jsx  SchoolMap.jsx  SearchBox.jsx  distance.js  filters.js  geocode.js  index.css  main.jsx  metrics.js  urlState.js
